--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<h2 class="sub_title">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</h2>
 				<div class="button_wrapper">
 					<a href="" class="button button_highlight">Learn more</a>
-					<a href="" class="button button_secondary">Play video</a>
+					<a href="" class="button button_secondary"><img src="images/play-icon.png"/> &nbsp;Play video</a>
 				</div>
 
 				<img src="images/arrows.png" class="see_more" alt="see more">
